# opengl_skybox

./: CMakeLists.txt  main.cpp
shaders/: cubeShader.frag  cubeShader.vert  skyShader.frag  skyShader.vert
